--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.show-sql=true
 server.port=8080
+
+#SwaggerConfig
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
