--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.jackson.time-zone=Asia/Jakarta
 spring.jackson.date-format=dd-MM-yyyy
 
+#Jwt Secret Key
+jwt.secret = sinaukoding22
+
