Add Login Menggunakan Jwt Token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jackson.time-zone=Asia/Jakarta
 spring.jackson.date-format=dd-MM-yyyy
 
 #Jwt Secret Key
-jwt.secret = sinaukoding22
+jwt.secret = sinausalwa22
 
